--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>this is my Homepage </h1>
+    <h1>This is my Homepage </h1>
     <footer>&copy;Copyright 2025 Fafa hou</footer>
 </body>
 </html>
