--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
 <body>
     <h1>This is my Homepage </h1>
     <footer>&copy;Copyright 2025 Fafa hou</footer>
+    <ul>
+<li>HELLO</li>
+<li>WHATS GOING UP?</li>
+<li></li>
+    <li></li>    
+    </ul>
 </body>
 </html>
