--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <ul>
 <li>HELLO</li>
 <li>WHATS GOING UP?</li>
-<li></li>
-    <li></li>    
+<li>BRO?</li>
+    <li>HELLO??!!</li>    
     </ul>
 </body>
 </html>
