--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <li>BRO?</li>
     <li>HELLO??!!</li>
     
-        <li>ARE YOU T>HERE?????????</li>
+        <li>ARE YOU THERE?????????</li>
     </ul>
     
 </body>
