--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width
     , initial-scale=1.0">
-    <title>Document</title>
+    <title>Fafas Homepage</title>
     <style>
         div {
             border: solid rgba(0, 255, 183, 0.066);
