--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
             <tr>
 
                 <td>Hobbies</td>
-                <td>play the piano/violin, ice-hockey</td>
+                <td>piano
+                    violin
+                    ice-hockey</td>
 
             </tr>
         </table>
