--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
             <tr>
 
                 <td>Hobbies</td>
-                <td>piano
-                    violin
+                <td>piano<br>
+                             
+                    violin<br>
                     ice-hockey</td>
 
             </tr>
