--- a/index.html
+++ b/index.html
@@ -58,6 +58,11 @@
                     ice-hockey</td>
 
             </tr>
+            <tr>
+                <td>Homepage</td>
+                <td>https://fifa2324-ai.github.io/</td>
+                
+            </tr>
         </table>
 
 
