--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         }
 
         #info_part {
-            color: black;
+            color: turquoise;
+            font-weight: bold;
             text-align: center;
             font-size: 50px;
         }
