--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
             </tr>
             <tr>
-                <td>phone</td>
+                <td>Phone</td>
                 <td>+4915730220988</td>
             </tr>
             <tr>
