--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
             width: 500px;
             background-size: contain;
             background-image: url(https://tse2.mm.bing.net/th/id/OIP.5MWuX6lEjzzI4-wKQgPb_QHaE8?pid=Api);
+            background-color:(255,255,255,0.5)
+                
             margin: 0 auto;
 
         }
