--- a/index.html
+++ b/index.html
@@ -7,15 +7,17 @@
     , initial-scale=1.0">
     <title>Document</title>
     <style>
+        body{
+            text-align: center;
+        }
         div {
             border: solid rgba(0, 255, 183, 0.066);
             height: 500px;
-         width: 560px;
+            width: 560px;
             background-size: contain;
             background-image: url(https://tse2.mm.bing.net/th/id/OIP.5MWuX6lEjzzI4-wKQgPb_QHaE8?pid=Api);
             background-color: 255,255,255,0.5;
             margin: 0 auto;
-            
 
         }
 
