--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <style>
         body{
             text-align: center;
+                        background-color: lightgoldenrodyellow;
+
         }
         div {
             border: solid rgba(0, 255, 183, 0.066);
@@ -16,7 +18,6 @@
             width: 560px;
             background-size: contain;
             background-image: url(https://tse2.mm.bing.net/th/id/OIP.5MWuX6lEjzzI4-wKQgPb_QHaE8?pid=Api);
-            background-color: 100,255,255,0.5;
             margin: 0 auto;
 
         }
