--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             height: 500px;
             width: 560px;
             background-size: contain;
-            background-image: url:(https://tse2.mm.bing.net/th/id/OIP.5MWuX6lEjzzI4-wKQgPb_QHaE8?pid=Api);
-            /* background-image: IMG_0108.JPEG; */
+            /* background-image: url:(https://tse2.mm.bing.net/th/id/OIP.5MWuX6lEjzzI4-wKQgPb_QHaE8?pid=Api); */
+            background-image:url: (IMG_0108.JPEG);
             margin: 0 auto;
 
         }
