--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             height: 500px;
             width: 560px;
             background-size: contain;
-            /* background-image: url:(https://tse2.mm.bing.net/th/id/OIP.5MWuX6lEjzzI4-wKQgPb_QHaE8?pid=Api); */
+            /background-image: url:(https://tse2.mm.bing.net/th/id/OIP.5MWuX6lEjzzI4-wKQgPb_QHaE8?pid=Api); 
             /* background-image: url(https://github.com/FiFa2324-AI/FiFa2324-AI.github.io/blob/main/IMG_0108.jpeg); */
-            background-image: url(IMG_0108.jpeg);
+            /* background-image: url(IMG_0108.jpeg); */
             margin: 0 auto;
 
         }
