--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             /* background-image: url(https://github.com/FiFa2324-AI/FiFa2324-AI.github.io/blob/main/IMG_0108.jpeg); */
             background-image: url(IMG_0108.jpeg);
             margin: 0 auto;
-            background-size: no-repeat;
+            background-size: contain;
 
         }
 
