--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
             background-image: url(IMG_0108.jpeg);
             margin: 0 auto;
             background-size: contain;
+            width:560px;
+            
 
         }
 
