add a video hes a pirate

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </tr>
             <tr>
                 <td>Email</td>
-                <td>fafa@email.com</td>
+                <td>mtg.</td>
 
             </tr>
             <tr>
@@ -89,7 +89,12 @@
             frameborder="0" allowfullscreen>
         </iframe>
     </div>
-    <div id=" MP4">
+
+    <div id="video_part2">
+        <iframe width="560" height="315" src="https://m.youtube.com/watch?v=AO7E39Dl-ZQ&pp=0gcJCTMBo7VqN5tD"
+            title="YouTube video" frameborder="0" allowfullscreen>
+        </iframe>
+    </div>
 
 
 
