--- a/index.html
+++ b/index.html
@@ -91,8 +91,13 @@
     </div>
 
     <div id="video_part2">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/AO7E39Dl-ZQ" 
-            title=" YouTube video" frameborder="0" allowfullscreen>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/AO7E39Dl-ZQ" title=" YouTube video"
+            frameborder="0" allowfullscreen>
+        </iframe>
+    </div>
+    <div id="video_part3">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/Y8TXeCp53q4
+" title=" YouTube video" frameborder="0" allowfullscreen>
         </iframe>
     </div>
 
@@ -103,7 +108,10 @@
 
 
 
-    </div>
+
+
+
+
     <h6>hello, bro</h6>
 
 
