--- a/index.html
+++ b/index.html
@@ -100,19 +100,7 @@
 " title=" YouTube video" frameborder="0" allowfullscreen>
         </iframe>
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-    <h6>hello, bro 。</h6>
+<h6>hello, bro</h6>
 
 
 
