--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         #presentation {
             font-size: 25px;
-            color: black;
+            color: white;
             width: 560px;
         }
     </style>
